--- a/WeatherBot/Web.config
+++ b/WeatherBot/Web.config
@@ -9,6 +9,8 @@
     <add key="AppId" value="2dc44a10-5c89-4c64-88d8-9eaadd00f768" />
     <add key="AppSecret" value="HwSJWq7KUNQw3ii5J9na6Zo" />
     <add key="lang" value="en"/>
+    <add key="MicrosoftAppId" value="2dc44a10-5c89-4c64-88d8-9eaadd00f768" />
+    <add key="MicrosoftAppPassword" value="HwSJWq7KUNQw3ii5J9na6Zo" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
